--- a/index.html
+++ b/index.html
@@ -6,12 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sua Head Shop em SLZ">
     <title>Jessamy - Sua Head Shop em SLZ</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <header><i></i></header>
+    <header class="header">
+        <nav class="menu">
+            <a class="menu-item" href="#">Produtos</a>
+            <a class="menu-item" href="#">Contatos</a>
+            <a class="menu-item" href="#">Entrar</a>
+            <a class="menu-item" href="#">Criar Conta</a>
+        </nav>
+        <img class="logoo" src="imagens/logoo.png" alt="">
+    </header>
     
-    <main></main>
+    <main class="main">
 
-    <footer></footer>
+        <section class="principal">
+            <div class="escrito">
+                <h1 class="h1">Jessamy</h1>
+                <h2 class="h2">Ache aqui seu produto!</h2>
+                <button class="button">Procurar</button>
+            </div>
+            <img class="imagem-main" src="" alt="">
+        </section>
+
+        <section class="secundario">
+            <h3 class="h3">O que nos fazemos por você?</h3>
+            <p class="paragrafo">
+                1. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            </p>
+            <p class="paragrafo">
+                2. Numquam voluptatibus ad asperiores, quidem minima iusto quo maiores cum labore suscipit sit enim accusamus.
+            </p>
+            <p class="paragrafo">
+                3. Debitis nesciunt facilis ut exercitationem ipsam tempore
+            </p>
+        </section>
+
+    </main>
+
+    <footer class="footer"><p class="rodape">Whillian Sousa</p></footer>
 </body>
 </html>
