Finalizando Land Page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a class="menu-item" href="#">Entrar</a>
             <a class="menu-item" href="#">Criar Conta</a>
         </nav>
-        <img class="logoo" src="imagens/logoo.png" alt="">
+        <div class="logo"><img class="logoo" src="imagens/logoo.png" alt=""></div>
     </header>
     
     <main class="main">
@@ -27,7 +27,7 @@
                 <h2 class="h2">Ache aqui seu produto!</h2>
                 <button class="button">Procurar</button>
             </div>
-            <img class="imagem-main" src="" alt="">
+            <div class="cinzeiro"></div>
         </section>
 
         <section class="secundario">
@@ -45,6 +45,6 @@
 
     </main>
 
-    <footer class="footer"><p class="rodape">Whillian Sousa</p></footer>
+    <footer class="footer"><p class="rodape0">Desenvolvido por</p><p class="rodape">Whillian Sousa</p></footer>
 </body>
 </html>
